add collapsible components
add collapsible components for more button options

--- a/WebContent/css/menu.css
+++ b/WebContent/css/menu.css
@@ -1,15 +1,25 @@
-.menu {
-	/* width: 300px; */
-}
+body {
+  overflow-y: scroll; }
 
 .main.container {
-	margin-top: 70px;
-}
+  margin-top: 70px; }
 
 .required::after {
-    content: "*";
-    right:0px;
-    top:10px;
-    border:0px solid;
-    position:absolute;
-}
+  content: "*";
+  right: 0px;
+  top: 10px;
+  border: 0px solid;
+  position: absolute; }
+
+.couple-group .form-control {
+  box-sizing: border-box;
+  float: left;
+  width: 45%; }
+.couple-group .form-control:first-child {
+  margin-right: 2px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0; }
+.couple-group .form-control:last-child {
+  margin-left: 2px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0; }
