--- a/WebContent/css/menu.css
+++ b/WebContent/css/menu.css
@@ -23,3 +23,6 @@ body {
   margin-left: 2px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0; }
+
+.form-control.error {
+  border: 1px solid red; }
